--- a/package.json
+++ b/package.json
@@ -1,6 +1,15 @@
 {
 	"name": "svelte-timer",
-	"version": "0.0.1",
+	"description": "Simple timer store with support for pausing and laps",
+	"version": "0.1.0",
+	"license": "MIT",
+	"author": "Matias Kumpulainen <matias.kumpulainen@kvanttori.fi>",
+	"repository": "kumpmati/svelte-timer",
+	"homepage": "https://github.com/kumpmati/svelte-timer",
+	"keywords": [
+		"svelte",
+		"timer"
+	],
 	"scripts": {
 		"dev": "vite dev",
 		"build": "svelte-kit sync && svelte-package",
